feat: added some CRUD features for domain, board
