# src/schemas/auth.schema.ts
@@ -15,39 +15,26 @@ export const userSignupSchema = z.object({
     .trim(), // Password must contain at least one capital letter, one small letter, one number, and one special character
 });
 
-export type UserSignupDTOType = {
-  fullName?: string;
-  domainName?: string;
-  email?: string;
-  password?: string;
-};
-
 export const userSigninSchema = z.object({
   email: z.string().email().trim().toLowerCase(),
   password: z.string().trim(),
 });
 
-export type UserSigninDTOType = {
-  email: string;
-  password: string;
-};
-
 export const passwordResetSchema = z.object({
   otp: z.string().min(CONSTANTS.OTP_LENGTH).trim(),
   password: z
-    .string()
-    .min(6, "Password should be at least 6 characters")
-    .regex(
-      /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$/,
+  .string()
+  .min(6, "Password should be at least 6 characters")
+  .regex(
+    /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$/,
       "Weak password"
     )
     .trim(),
 });
 
-export type PasswordResetDTO = {
-  otp: string,
-  password: string
-}
+export type PasswordResetDTO = ReturnType<typeof passwordResetSchema.parse>;
+export type UserSignupDTOType = ReturnType<typeof userSignupSchema.parse>;
+export type UserSigninDTOType = ReturnType<typeof userSigninSchema.parse>;
 
 export default {
   userSignupSchema,
