# src/utils/swagger.json
@@ -6,7 +6,7 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"UserSignupDTOType": {
+			"ReturnType_typeofuserSignupSchema.parse_": {
 				"properties": {
 					"password": {
 						"type": "string"
@@ -21,9 +21,13 @@
 						"type": "string"
 					}
 				},
-				"type": "object"
+				"type": "object",
+				"description": "Obtain the return type of a function type"
 			},
-			"UserSigninDTOType": {
+			"UserSignupDTOType": {
+				"$ref": "#/components/schemas/ReturnType_typeofuserSignupSchema.parse_"
+			},
+			"ReturnType_typeofuserSigninSchema.parse_": {
 				"properties": {
 					"password": {
 						"type": "string"
@@ -32,13 +36,13 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"password",
-					"email"
-				],
-				"type": "object"
+				"type": "object",
+				"description": "Obtain the return type of a function type"
 			},
-			"PasswordResetDTO": {
+			"UserSigninDTOType": {
+				"$ref": "#/components/schemas/ReturnType_typeofuserSigninSchema.parse_"
+			},
+			"ReturnType_typeofpasswordResetSchema.parse_": {
 				"properties": {
 					"password": {
 						"type": "string"
@@ -47,11 +51,62 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"password",
-					"otp"
-				],
-				"type": "object"
+				"type": "object",
+				"description": "Obtain the return type of a function type"
+			},
+			"PasswordResetDTO": {
+				"$ref": "#/components/schemas/ReturnType_typeofpasswordResetSchema.parse_"
+			},
+			"ReturnType_typeofboardCreateSchema.parse_": {
+				"properties": {
+					"domainId": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Obtain the return type of a function type"
+			},
+			"BoardCreateDTO": {
+				"$ref": "#/components/schemas/ReturnType_typeofboardCreateSchema.parse_"
+			},
+			"ReturnType_typeofboardUpdateSchema.parse_": {
+				"properties": {
+					"name": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Obtain the return type of a function type"
+			},
+			"BoardUpdateDTO": {
+				"$ref": "#/components/schemas/ReturnType_typeofboardUpdateSchema.parse_"
+			},
+			"ReturnType_typeofdomainCreateSchema.parse_": {
+				"properties": {
+					"domainName": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Obtain the return type of a function type"
+			},
+			"DomainCreateDTO": {
+				"$ref": "#/components/schemas/ReturnType_typeofdomainCreateSchema.parse_"
+			},
+			"ReturnType_typeofdomainUpdateSchema.parse_": {
+				"properties": {
+					"domainName": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Obtain the return type of a function type"
+			},
+			"DomainUpdateDTO": {
+				"$ref": "#/components/schemas/ReturnType_typeofdomainUpdateSchema.parse_"
 			},
 			"UserUpdateDTOType": {
 				"properties": {
@@ -334,6 +389,347 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/api/domains/{domainId}/boards": {
+			"get": {
+				"operationId": "GetBoards",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Retrieves a list of boards for a domain",
+				"tags": [
+					"Boards"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "domainId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"post": {
+				"operationId": "CreateBoard",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Creates a new board in a domain",
+				"tags": [
+					"Boards"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/BoardCreateDTO"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/domains/{domainId}/boards/{boardId}": {
+			"get": {
+				"operationId": "GetBoard",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Retrieves a specific board",
+				"tags": [
+					"Boards"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "boardId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"patch": {
+				"operationId": "EditBoard",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Edits a board",
+				"tags": [
+					"Boards"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "boardId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/BoardUpdateDTO"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteBoard",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Deletes a board",
+				"tags": [
+					"Boards"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "boardId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/domains": {
+			"post": {
+				"operationId": "CreateDomain",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Create a domain",
+				"tags": [
+					"Domains"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DomainCreateDTO"
+							}
+						}
+					}
+				}
+			},
+			"get": {
+				"operationId": "GetDomains",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Retrieves list of domains belonging to a user",
+				"tags": [
+					"Domains"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/domains/{domainId}": {
+			"get": {
+				"operationId": "GetDomain",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Retrieves a domain belonging to a user",
+				"tags": [
+					"Domains"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "domainId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"patch": {
+				"operationId": "EditDomain",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Edit a domain belonging to a user",
+				"tags": [
+					"Domains"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "domainId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DomainUpdateDTO"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteDomain",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Delete a domain belonging to a user",
+				"tags": [
+					"Domains"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "domainId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/user/profile": {
